QoL and fixed button overlapping navbar

--- a/notkayak.css
+++ b/notkayak.css
@@ -13,8 +13,25 @@ label {
     font-weight: bold;
 }
 .label_div {
-    float:left;
+    display: inline-block;
     margin-right:20px;
+    width: 20%
+}
+input{
+    text-align: center;
+    font-size: 20px;
+}
+input[type=text]  , input[type=date]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 1px solid #555;
+    outline: none;
+  }
+input[type=text]:focus , input[type=date]:focus {
+    border: 3px solid #555;
+    background-color: lightblue;
 }
 body {
     margin:0;
@@ -82,7 +99,6 @@ button:hover, button:focus {
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-    position: relative;
     display: inline-block;
 }
 
@@ -105,7 +121,12 @@ button:hover, button:focus {
     text-decoration: none;
     display: block;
 }
-
+#not_navbar {
+    text-align: center;
+}
+#navbar {
+    z-index: 1;
+}
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover , .dropdown-content2 a:hover,.dropdown-content3 a:hover {background-color: #ddd}
 
